rns-lang/tests/snapshots/error-parser-outside_class_directive-dot_end_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.end method ; trailing comment
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_end.ja:1:1 ]
   │
 1 │ .end method ; trailing comment
   │ ──┬─  
   │   ╰─── '.end' has no matching start directive
   │ 
   │ Note: The '.end' directive must match a previous '.method', '.code', or '.class' directive.
───╯
----- HASH -----
not generated
