rns-lang/tests/snapshots/error-parser-outside_class_directive-dot_super_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; comment before the directive
.super java/lang/Object
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected directive before class definition
   ╭─[ test_data/integration/error/parser/outside_class_directive/dot_super.rns:2:1 ]
   │
 2 │ .super java/lang/Object
   │ ───┬──  
   │    ╰──── '.super' is only allowed inside a class definition
   │ 
   │ Note: Define a class first using '.class [access_flags] <name>'.
───╯
----- HASH -----
not generated
