rns-lang/tests/snapshots/error-parser-outside_class_directive-enum_keyword.snap
---
source: jasm/tests/jasm_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
; some comment
; another comment
enum
.class public HelloWorld
----- STDERR -----
[PARSER-001] Error: unexpected keyword before class definition
   ╭─[ /home/amyroshn/workspace/projects/lagertha-vm/jasm/test_data/integration/error/parser/outside_class_directive/enum_keyword.ja:3:1 ]
   │
 3 │ enum
   │ ──┬─  
   │   ╰─── this keyword must appear inside a class definition
   │ 
   │ Note: Access flags must appear within a '.class' or '.method' directive.
───╯
----- HASH -----
not generated
